<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:src="@drawable/mergisus"
        app:tint="@color/white"
        android:backgroundTint="?attr/colorPrimary"
        app:borderWidth="0dp"
        android:onClick="goUp"
        android:alpha="0.5"/>

    <ScrollView
        android:id="@+id/scvIntro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_intro0"
                android:textSize="40sp"
                android:fontFamily="sans-serif-black"
                android:layout_margin="15dp"
                />
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/forma_cuprins"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    android:layout_marginStart="15dp"
                    />
                <TextView
                    android:id="@+id/cpName0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro2"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/cpName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro3"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="italic"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/cpName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro4"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="italic"

                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/cpName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro5"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="italic"

                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/cpName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro6"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="italic"

                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/cpName5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_intro7"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="italic"

                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
            </LinearLayout>
           <TextView
               android:id="@+id/cnt0"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/titlu_intro2"
               android:fontFamily="sans-serif-condensed-medium"
               android:textSize="20sp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="7.5dp"
               android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continut_intro1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/secv_simpla_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/cnt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_intro3"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continut_intro2"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/secv_where_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/cnt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_intro4"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continut_intro3"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/secv_orderby_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/cnt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_intro5"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continut_intro4"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/secv_groupby_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/cnt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_intro6"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continut_intro5"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/secv_having_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/cnt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_intro7"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continut_intro6"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>