<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunctiiGenerale">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:src="@drawable/mergisus"
        app:tint="@color/white"
        android:backgroundTint="?attr/colorPrimary"
        app:borderWidth="0dp"
        android:onClick="goUp"
        android:alpha="0.5"/>

    <ScrollView
        android:id="@+id/scv_f_gen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_f_gen0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_f_gen0"
                android:textSize="40sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/forma_cuprins"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_f_gen"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"/>
                <TextView
                    android:id="@+id/title_f_gen1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_f_gen1"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/title_f_gen2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_f_gen2"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/title_f_gen3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_f_gen3"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
                <TextView
                    android:id="@+id/title_f_gen4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_f_gen4"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="7.5dp"
                    android:layout_marginBottom="7.5dp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/cnt_f_gen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_f_gen1"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnt_f_gen1"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/cod_f_gen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/cnt_f_gen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_f_gen2"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnt_f_gen2"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/cod_f_gen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/cnt_f_gen3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_f_gen3"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnt_f_gen3"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/cod_f_gen3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/cnt_f_gen4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titlu_f_gen4"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnt_f_gen4"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"/>
            <br.tiagohm.codeview.CodeView
                android:id="@+id/cod_f_gen4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>